Implemented generic operations for Member, Exercise and Trainer