@@ -3,6 +3,7 @@ package domain;
 import java.io.Serializable;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -118,10 +119,10 @@ public class Member implements Serializable, GenericEntity  {
 
     @Override
     public ArrayList<String> getIdNames() {
-        return (ArrayList<String>) List.of("memberID");
+          return  new ArrayList<>(Arrays.asList("memberID"));
     }
     @Override
     public void setId(int id) {
-        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
+        setMemberID(id);
     }
 }
